[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Batool Malkawi <batoolmalkawii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
jupyterlab = "^2.2.9"
pandas = "^1.1.5"
Keras = "^2.4.3"
tensorflow = "^2.4.0"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
